// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageItem> renders a loading author 1`] = `
<div
  className="container"
>
  <div
    className="grid"
  >
    <div>
      <Shimmer
        height={32}
        radius="50%"
        width={32}
      />
    </div>
    <div>
      <Spacing
        bottom={0.5}
      >
        <Spacing
          inline={true}
          right={1}
        >
          <Shimmer
            height={14}
            width={175}
          />
        </Spacing>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      Hello world
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item 1`] = `
<div
  className="container"
>
  <div
    className="grid"
  >
    <div
      className="relative"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div>
      <Spacing
        bottom={0.5}
      >
        <Row
          after={
            <Memo(WithStyles)
              before=""
              inline={true}
              middleAlign={true}
            >
              <Memo(WithStyles)
                micro={true}
                muted={true}
              >
                11:56 AM
              </Memo(WithStyles)>
            </Memo(WithStyles)>
          }
          inline={true}
          middleAlign={true}
          truncated={true}
        >
          <Text
            bold={true}
            truncated={true}
          >
            title
          </Text>
        </Row>
      </Spacing>
      <div
        className="wordBreak"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`horizontalSpacing\` 1`] = `
<div
  className="container container_horizontalSpacing"
>
  <div
    className="grid"
  >
    <div
      className="relative"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div>
      <Spacing
        bottom={0.5}
      >
        <Row
          after={
            <Memo(WithStyles)
              before=""
              inline={true}
              middleAlign={true}
            >
              <Memo(WithStyles)
                micro={true}
                muted={true}
              >
                11:56 AM
              </Memo(WithStyles)>
            </Memo(WithStyles)>
          }
          inline={true}
          middleAlign={true}
          truncated={true}
        >
          <Text
            bold={true}
            truncated={true}
          >
            title
          </Text>
        </Row>
      </Spacing>
      <div
        className="wordBreak"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`important\` 1`] = `
<div
  className="container container_withStripe container_important"
>
  <div
    className="grid"
  >
    <div
      className="relative"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div>
      <Spacing
        bottom={0.5}
      >
        <Row
          after={
            <Memo(WithStyles)
              before=""
              inline={true}
              middleAlign={true}
            >
              <Memo(WithStyles)
                micro={true}
                muted={true}
              >
                11:56 AM
              </Memo(WithStyles)>
            </Memo(WithStyles)>
          }
          inline={true}
          middleAlign={true}
          truncated={true}
        >
          <Text
            bold={true}
            truncated={true}
          >
            title
          </Text>
        </Row>
      </Spacing>
      <div
        className="wordBreak"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`info\` stripe 1`] = `
<div
  className="container container_withStripe container_info"
>
  <div
    className="grid"
  >
    <div
      className="relative"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div>
      <Spacing
        bottom={0.5}
      >
        <Row
          after={
            <Memo(WithStyles)
              before=""
              inline={true}
              middleAlign={true}
            >
              <Memo(WithStyles)
                micro={true}
                muted={true}
              >
                11:56 AM
              </Memo(WithStyles)>
            </Memo(WithStyles)>
          }
          inline={true}
          middleAlign={true}
          truncated={true}
        >
          <Text
            bold={true}
            truncated={true}
          >
            title
          </Text>
        </Row>
      </Spacing>
      <div
        className="wordBreak"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`verticalSpacing\` 1`] = `
<div
  className="container container_verticalSpacing"
>
  <div
    className="grid"
  >
    <div
      className="relative"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div>
      <Spacing
        bottom={0.5}
      >
        <Row
          after={
            <Memo(WithStyles)
              before=""
              inline={true}
              middleAlign={true}
            >
              <Memo(WithStyles)
                micro={true}
                muted={true}
              >
                11:56 AM
              </Memo(WithStyles)>
            </Memo(WithStyles)>
          }
          inline={true}
          middleAlign={true}
          truncated={true}
        >
          <Text
            bold={true}
            truncated={true}
          >
            title
          </Text>
        </Row>
      </Spacing>
      <div
        className="wordBreak"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`warning\` stripe 1`] = `
<div
  className="container container_withStripe container_warning"
>
  <div
    className="grid"
  >
    <div
      className="relative"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div>
      <Spacing
        bottom={0.5}
      >
        <Row
          after={
            <Memo(WithStyles)
              before=""
              inline={true}
              middleAlign={true}
            >
              <Memo(WithStyles)
                micro={true}
                muted={true}
              >
                11:56 AM
              </Memo(WithStyles)>
            </Memo(WithStyles)>
          }
          inline={true}
          middleAlign={true}
          truncated={true}
        >
          <Text
            bold={true}
            truncated={true}
          >
            title
          </Text>
        </Row>
      </Spacing>
      <div
        className="wordBreak"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a sending overlay when message is sending 1`] = `
<div
  className="container"
>
  <div
    className="grid"
  >
    <div
      className="relative"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div>
      <Spacing
        bottom={0.5}
      >
        <Row
          after={
            <Memo(WithStyles)
              before=""
              inline={true}
              middleAlign={true}
            >
              <Memo(WithStyles)
                micro={true}
                muted={true}
              >
                11:56 AM
              </Memo(WithStyles)>
            </Memo(WithStyles)>
          }
          inline={true}
          middleAlign={true}
          truncated={true}
        >
          <Text
            bold={true}
            truncated={true}
          >
            title
          </Text>
        </Row>
      </Spacing>
      <div
        className="wordBreak"
      >
        Hello world
      </div>
    </div>
  </div>
  <div
    className="sendingOverlay"
  />
</div>
`;

exports[`<MessageItem> renders a source when given 1`] = `
<div
  className="container"
>
  <div
    className="grid"
  >
    <div
      className="relative"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div>
      <Spacing
        bottom={0.5}
      >
        <Row
          after={
            <Memo(WithStyles)
              before=""
              inline={true}
              middleAlign={true}
            >
              <Memo(WithStyles)
                micro={true}
                muted={true}
              >
                11:56 AM via web
              </Memo(WithStyles)>
            </Memo(WithStyles)>
          }
          inline={true}
          middleAlign={true}
          truncated={true}
        >
          <Text
            bold={true}
            truncated={true}
          >
            title
          </Text>
        </Row>
      </Spacing>
      <div
        className="wordBreak"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a title tag when given 1`] = `
<div
  className="container"
>
  <div
    className="grid"
  >
    <div
      className="relative"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div>
      <Spacing
        bottom={0.5}
      >
        <Row
          after={
            <Memo(WithStyles)
              before={
                <div
                  className="tag"
                >
                  <Memo(WithStyles)
                    baseline={true}
                    micro={true}
                    muted={true}
                  >
                    CX
                  </Memo(WithStyles)>
                </div>
              }
              inline={true}
              middleAlign={true}
            >
              <Memo(WithStyles)
                micro={true}
                muted={true}
              >
                11:56 AM
              </Memo(WithStyles)>
            </Memo(WithStyles)>
          }
          inline={true}
          middleAlign={true}
          truncated={true}
        >
          <Text
            bold={true}
            truncated={true}
          >
            title
          </Text>
        </Row>
      </Spacing>
      <div
        className="wordBreak"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders an email when given 1`] = `
<div
  className="container"
>
  <div
    className="grid"
  >
    <div
      className="relative"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div>
      <Spacing
        bottom={0.5}
      >
        <Row
          after={
            <Memo(WithStyles)
              before=""
              inline={true}
              middleAlign={true}
            >
              <Memo(WithStyles)
                micro={true}
                muted={true}
              >
                11:56 AM
              </Memo(WithStyles)>
            </Memo(WithStyles)>
          }
          inline={true}
          middleAlign={true}
          truncated={true}
        >
          <Text
            bold={true}
            truncated={true}
          >
            title
          </Text>
        </Row>
        <Text
          muted={true}
          small={true}
        >
          <Translate
            context="Who the message is from"
            email="foo@airbnb.com"
            html={true}
            k="lunar.message.fromUser"
            phrase="From: %{email}"
          />
        </Text>
      </Spacing>
      <div
        className="wordBreak"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;
